feat: getting user session data from token and add common util library